[gd_scene load_steps=3 format=3 uid="uid://c44h63ohfqgfy"]

[ext_resource type="Script" uid="uid://b4wusip5t14gg" path="res://MainMenu/main_menu.gd" id="1_qoqlk"]
[ext_resource type="Texture2D" uid="uid://daec2v4i7leq4" path="res://Background/placeholder.png" id="1_s1ons"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_qoqlk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer"]
z_index = 1
layout_mode = 2
text = "video game
best video game
3eam t3am"
horizontal_alignment = 1

[node name="Placeholder" type="Sprite2D" parent="MarginContainer"]
position = Vector2(759.667, 569)
scale = Vector2(1.48177, 1.48177)
texture = ExtResource("1_s1ons")

[node name="fightTest" type="Button" parent="."]
layout_mode = 0
offset_left = 326.0
offset_top = 528.0
offset_right = 570.0
offset_bottom = 607.0
text = "start fight scene debug"

[node name="overWorldTest" type="Button" parent="."]
layout_mode = 0
offset_left = 618.0
offset_top = 528.0
offset_right = 874.0
offset_bottom = 612.0
text = "start overworld test"

[node name="inventoryTest" type="Button" parent="."]
layout_mode = 0
offset_left = 754.0
offset_top = 366.0
offset_right = 955.0
offset_bottom = 489.0
text = "inventory test"

[node name="Pausemenutest" type="Button" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 389.0
offset_right = 585.0
offset_bottom = 512.0
text = "pause menu test"

[connection signal="pressed" from="fightTest" to="." method="_on_fight_test_pressed"]
[connection signal="pressed" from="overWorldTest" to="." method="_on_over_world_test_pressed"]
[connection signal="pressed" from="inventoryTest" to="." method="_on_inventory_test_pressed"]
[connection signal="pressed" from="Pausemenutest" to="." method="_on_pausemenutest_pressed"]
